Add configurable user mappings via uv.security.oidc.user-mappings